--- a/app/src/main/res/drawable/blue_gradient.xml
+++ b/app/src/main/res/drawable/blue_gradient.xml
@@ -1,7 +1,7 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="#4A3E9D"
         android:endColor="#4A3E9D"
-        android:angle="0"/>
-    <corners android:radius="50dp" />
+        android:angle="270" />
+    <corners android:radius="24dp"/>
 </shape>
