--- a/app/src/main/res/layout/activity_doctor_appointments.xml
+++ b/app/src/main/res/layout/activity_doctor_appointments.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#E7F6FF">
+    android:background="#FFFF">
 
     <LinearLayout
         android:orientation="vertical"
