--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -145,7 +145,9 @@
 
             <!-- Address -->
             <LinearLayout
-                style="@style/ProfileRow">
+                style="@style/ProfileRow"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content">
                 <ImageView
                     android:src="@drawable/ic_home"
                     android:layout_width="24dp"
@@ -167,7 +169,9 @@
 
             <!-- Caregiver -->
             <LinearLayout
-                style="@style/ProfileRow">
+                style="@style/ProfileRow"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content">
                 <ImageView
                     android:src="@drawable/ic_people"
                     android:layout_width="24dp"
@@ -209,7 +213,9 @@
 
             <!-- Phone -->
             <LinearLayout
-                style="@style/ProfileRow">
+                style="@style/ProfileRow"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content">
                 <ImageView
                     android:src="@drawable/ic_phone"
                     android:layout_width="24dp"
@@ -231,7 +237,9 @@
 
             <!-- Email -->
             <LinearLayout
-                style="@style/ProfileRow">
+                style="@style/ProfileRow"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content">
                 <ImageView
                     android:src="@drawable/ic_email"
                     android:layout_width="24dp"
